<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_action_favorites"
        android:orderInCategory="1"
        android:menuCategory="system"
        android:showAsAction="always"
        android:title="@string/action_favorites"/>
    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:menuCategory="system"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView|always"
        android:title="@string/search"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_clear_recent"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="201"
        android:showAsAction="never"
        android:title="@string/action_clear_recent"/>
    <item
        android:id="@+id/action_clear_cache"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="203"
        android:showAsAction="never"
        android:title="@string/action_clear_cache"/>
    <item
        android:id="@+id/menu_item_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:showAsAction="ifRoom"
        android:orderInCategory="110"
        android:title="@string/action_share"
        android:visible="false"
      />

</menu>