<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MediaDetails" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF" >

        <TextView
            android:id="@+id/d_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-normal"
            android:padding="5dp"
            android:text="@string/titre"
            android:textColor="@color/title"
            android:textIsSelectable="true"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/media_poster"
            android:layout_width="110dp"
            android:layout_height="160dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/d_title"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/media_detail_img"
            android:scaleType="center"
            android:src="@drawable/movie_detail" />

        <ImageView
            android:id="@+id/imdb_star"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/media_poster"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/media_poster"
            android:contentDescription="@+string/imdb"
            android:src="@drawable/star" />

        <TextView
            android:id="@+id/imdb_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imdb_star"
            android:layout_alignLeft="@+id/imdb_star"
            android:layout_alignRight="@+id/imdb_star"
            android:layout_alignTop="@+id/imdb_star"
            android:layout_margin="1dp"
            android:gravity="center"
            android:text="@string/default_imdb_rate"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_alignBaseline="@+id/imdb_star"
            android:layout_alignBottom="@+id/imdb_star"
            android:layout_height="30dp"
            android:layout_toRightOf="@+id/imdb_voteCount"
            android:src="@drawable/imdb_logo"
            android:contentDescription="@+id/imdb_site" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imdb_star"
            android:layout_alignTop="@+id/imdb_star"
            android:layout_toEndOf="@+id/imdb_rating"
            android:layout_toRightOf="@+id/imdb_star"
            android:gravity="center"
            android:paddingLeft="6dp"
            android:id="@+id/imdb_voteCount"
            android:text="@string/imdb_user"
            android:textColor="#555" />

        <ImageView
            android:id="@+id/freshness"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/imdb_star"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/media_poster"
            android:contentDescription="@+string/freshness"
            android:src="@drawable/fresh" />

        <TextView
            android:id="@+id/rt_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/freshness"
            android:layout_alignTop="@+id/freshness"
            android:layout_toRightOf="@+id/freshness"
            android:gravity="center"
            android:paddingLeft="6dp"
            android:text="@string/imdb_user"
            android:textColor="#555" />

        <TextView
            android:id="@+id/rt_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/rt_vote"
            android:layout_alignTop="@+id/rt_vote"
            android:layout_toRightOf="@+id/rt_vote"
            android:gravity="center"
            android:paddingLeft="6dp"
            android:text="85%"
            android:textColor="#0FFF05"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp" >
    </LinearLayout>

</LinearLayout>