<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/search_bar"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.8"
                android:hint="@string/search_hint"
                android:inputType="text" />

            <Button
                android:id="@+id/search_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:text="@string/search" />

            <ImageView
                android:id="@+id/star"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="#A60717"
                android:clickable="true"
                android:contentDescription="@string/error"
                android:src="@drawable/star" />
        </LinearLayout>

        <TextView
            android:id="@+id/fav_db_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Test for quick add to db, Drop table with the (red?) star :"
            android:textSize="18sp"
            android:textStyle="bold|normal" />

        <TextView
            android:id="@+id/fav_ex_titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="10dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/fav_ex_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="10dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/fav_ex_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="10dp"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/fav_ex_seen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="10dp"
            android:text="Already seen"
            android:textSize="15sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/fav_db_add"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="addTodb"
            android:visibility="invisible" />
    </LinearLayout>

    <ListView
        android:id="@+id/drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

</android.support.v4.widget.DrawerLayout>